fixed hero text and logo overlap, also general margins

--- a/src/mediaquery/_mediaqHome.scss
+++ b/src/mediaquery/_mediaqHome.scss
@@ -1,8 +1,13 @@
 // MAX HEIGHT 944px
 @media (max-height: 59em) {
   body {
-    .heroTextBelow {
-      height: 35vh;
+    .sectionHero {
+      .heroText {
+        height: 70vh;
+      }
+      .heroTextBelow {
+        height: 42vh;
+      }
     }
   }
 }
@@ -23,10 +28,10 @@
       top: 45%;
     }
     .sectionHero {
-      height: 125vh;
-    }
-    .heroTextBelow {
-      height: 45vh;
+      height: 115vh;
+      .heroTextBelow {
+        height: 42vh;
+      }
     }
   }
 }
@@ -34,22 +39,24 @@
 // MAX HEIGHT 688px
 @media (max-height: 43em) {
   body {
-    .heroText {
-      padding-top: 10rem;
-    }
-    .heroText {
-      height: 70vh;
-    }
-    .heroTextBelow {
-      height: 52vh;
-    }
     .sectionHeading__why {
       padding: 1rem 5rem 5rem 5rem;
     }
+    .sectionHero {
+      height: 120vh;
+      .heroTextBelow {
+        height: 50vh;
+      }
+      .heroText {
+        padding-top: 10rem;
+        height: 65vh;
+      }
+      .kuponoLogo {
+        top: 42%;
+      }
+    }
   }
 }
-
-// MAX HEIGHT 576px
 
 ///////////////////////////////////////////////////////////////
 
@@ -532,15 +539,15 @@
     }
     .mainBundles {
       width: 30rem;
-      height: 37rem;
+      height: 38rem;
 
       .bundle__front {
         width: 30rem;
-        height: 37rem;
+        height: 38rem;
       }
       .bundle__back {
         width: 30rem;
-        height: 37rem;
+        height: 38rem;
       }
     }
   }
@@ -589,6 +596,9 @@
     .missionBox {
       grid-template-columns: 1fr 1fr;
     }
+    .products-box {
+      padding-bottom: 5rem;
+    }
     .products-text-box {
       width: 30rem;
       grid-template-columns: 60% 40%;
@@ -628,6 +638,9 @@
       .bundle__back {
         width: 26rem;
       }
+    }
+    .howContainer {
+      margin-bottom: 0rem;
     }
   }
 }
