--- a/src/mediaquery/_mediaqShop.scss
+++ b/src/mediaquery/_mediaqShop.scss
@@ -77,13 +77,13 @@
       }
 
       .mainBundles {
-        height: 37rem;
+        height: 38rem;
 
         .bundle__front {
-          height: 37rem;
+          height: 38rem;
         }
         .bundle__back {
-          height: 37rem;
+          height: 38rem;
         }
       }
     }
